Add board, pieces and some logic

--- a/chess-engine/src/app/app.component.html
+++ b/chess-engine/src/app/app.component.html
@@ -1,1 +1,2 @@
-<h1>Welcome to "Insert name of chess enginer here"</h1>
+<h1 class="welcome-text">Welcome to My Chess Engine</h1>
+<app-board></app-board>
